Create endpoint for fetching account data and deleting account
