# src/main/kotlin/user/api/model/DeleteAccountRequest.kt
@@ -1,0 +1,8 @@
+package de.okan.drink_and_snack_api.user.api.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class DeleteAccountRequest(
+    val password: String
+)
