# src/main/kotlin/user/api/model/UserDTO.kt
@@ -1,0 +1,10 @@
+package de.okan.drink_and_snack_api.user.api.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class UserDTO(
+    val username: String,
+    val firstName: String,
+    val lastName: String,
+)
