# src/main/resources/openapi/documentation.yaml
@@ -8,6 +8,8 @@ servers:
   - url: http://localhost:8080
 
 tags:
+  - name: Auth
+    description: Operations related to authentication
   - name: Users
     description: Operations related to users
   - name: Stores
@@ -36,7 +38,7 @@ paths:
   /api/v1/auth/register:
     post:
       tags:
-        - Users
+        - Auth
       summary: Register new user
       requestBody:
         required: true
@@ -53,7 +55,7 @@ paths:
   /api/v1/auth/login:
     post:
       tags:
-        - Users
+        - Auth
       summary: Login user
       requestBody:
         required: true
@@ -66,6 +68,35 @@ paths:
           description: Logged in
         '400':
           description: Wrong username or password
+
+  /api/v1/users/me:
+    get:
+      tags:
+        - Users
+      summary: Get own user data
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+
+    delete:
+      tags:
+        - Users
+      summary: Delete own user account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeleteAccountRequest'
+      responses:
+        '204':
+          description: Account deleted
+        '400':
+          description: Wrong password
 
 
   /api/v1/stores:
@@ -346,3 +377,23 @@ components:
       required:
         - username
         - password
+
+    UserDTO:
+      type: object
+      properties:
+        username:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+      required:
+        - username
+        - firstName
+        - lastName
+
+    DeleteAccountRequest:
+      type: object
+      properties:
+        password:
+          type: string
